implemented home assignment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>Angular Router Sample</h1>
-<router-outlet></router-outlet>
+<header>
+  <h3>HOME ASSIGNMENT</h3>
+</header>
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
